fix gap

--- a/css/style.css
+++ b/css/style.css
@@ -351,7 +351,7 @@ flex-direction:row;
 align-items: center;
 justify-content: space-between;
 flex-wrap: wrap;
-gap: 40px;
+gap: 100px;
 margin-top: 200px;
 
 }
